--- a/Agent profil.html
+++ b/Agent profil.html
@@ -135,6 +135,7 @@
                 <option value="Boniville Student Acc">Boniville Student Acc</option>
                 <option value="Paballo Student Acc">Paballo Student Acc</option>
                 <option value="EGP-holdings">EGP-holdings</option>
+                <option value="Nathis Res">Nathis Res</option>
                 <option value="not listed">Other (Not Listed Above)</option>
         </select>
         <input type="text" id="manual-acc" name="manualAccommodation" placeholder="Enter Name" class="w-full p-4 border border-blue-400 rounded-2xl hidden mt-2">
