--- a/Agent profil.html
+++ b/Agent profil.html
@@ -135,6 +135,7 @@
                 <option value="Boniville Student Acc">Boniville Student Acc</option>
                 <option value="Paballo Student Acc">Paballo Student Acc</option>
                 <option value="EGP-holdings">EGP-holdings</option>
+                <option value="Zulu's res">Zulu's res</option>
                 <option value="Nathis Res">Nathis Res</option>
                 <option value="not listed">Other (Not Listed Above)</option>
         </select>
