--- a/management.html
+++ b/management.html
@@ -438,24 +438,27 @@
     }
     
     function openAgentPayment(agentId) {
-    // 1. Find the agent's details from our global users list
     const agent = allUsers.find(u => u._id === agentId);
     if (!agent) return alert("Agent not found");
 
-    // 2. Get the specific commission set for THIS agent
-    // Default to 250 if for some reason it's not set in your database
-    const agentCommission = agent.commissionRate || 250;
-
-    // 3. Filter approved recruits for this specific agent
+    // 1. Filter approved recruits for this specific agent
     const agentRecruits = allRecruits.filter(r => {
         const ref = r.agent?._id || r.agent;
         return ref === agentId && r.status === 'Approved';
     });
 
-    const count = agentRecruits.length;
-    const totalPayout = count * agentCommission;
+    // 2. CALCULATE DYNAMIC TOTAL
+    // We loop through each recruit and add their specific commission.
+    // If the recruit doesn't have a rate saved, it falls back to the Agent's default.
+    let totalPayout = 0;
+    agentRecruits.forEach(recruit => {
+        const rate = recruit.commissionRate || agent.commissionRate || 250;
+        totalPayout += rate;
+    });
 
-    // 4. Update the Modal UI
+    const count = agentRecruits.length;
+
+    // 3. Update the Modal UI
     const modal = document.getElementById('payment-modal');
     const content = document.getElementById('payment-content');
     
@@ -463,7 +466,7 @@
         <div class="p-4 bg-blue-50 rounded-xl border border-blue-100">
             <p class="text-xs uppercase text-blue-400 font-bold mb-1">Target Agent</p>
             <p class="text-sm font-bold text-black">${agent.fullName} (${agent.agentId || 'N/A'})</p>
-            <p class="text-xs text-blue-600 mt-1">Set Commission: <b>R ${agentCommission}</b> per recruit</p>
+            <p class="text-xs text-blue-600 mt-1 italic font-medium">Calculation based on individual recruit rates</p>
         </div>
         <div class="grid grid-cols-2 gap-4 mt-4">
             <div class="bg-gray-100 p-4 rounded-xl text-center">
@@ -475,7 +478,7 @@
                 <p class="text-2xl font-black text-green-700">R ${totalPayout.toLocaleString()}</p>
             </div>
         </div>
-        <button onclick="printPayoutPDF('${agent.fullName}', '${agent.agentId}', ${count}, ${totalPayout}, ${agentCommission})" 
+        <button onclick="printPayoutPDF('${agent.fullName}', '${agent.agentId}', ${count}, ${totalPayout})" 
                 class="w-full mt-6 bg-blue-600 text-white py-3 rounded-xl font-black uppercase hover:bg-blue-700 shadow-lg transition">
             🖨️ Print Proof of Payment
         </button>
