--- a/management.html
+++ b/management.html
@@ -450,7 +450,14 @@
     // 2. CALCULATE DYNAMIC TOTAL
     // We loop through each recruit and add their specific commission.
     // If the recruit doesn't have a rate saved, it falls back to the Agent's default.
-    let totalPayout = 0;
+let totalPayout = 0;
+agentRecruits.forEach(recruit => {
+    // Priority 1: The rate saved on the specific recruit
+    // Priority 2: The custom rate saved on the agent's profile
+    // Priority 3: The standard R250
+    const rate = Number(recruit.commissionRate) || Number(agent.commissionRate) || 250;
+    totalPayout += rate;
+});
     agentRecruits.forEach(recruit => {
         const rate = recruit.commissionRate || agent.commissionRate || 250;
         totalPayout += rate;
