--- a/Learn More.html
+++ b/Learn More.html
@@ -373,6 +373,23 @@
                 <a href="view__in.html"><button class="more-details">View Full Profile</button></a>
             </div>
         </div>
+        <div class="accommodation">
+            <div class="slideshow-container">
+                <img src="Images/mbh ext.jpeg" class="active">
+                <img src="Images/mbh ext3.jpeg">
+                <img src="Images/mbh single 1.jpeg">
+                <img src="Images/mbh single bed.jpeg">
+                <img src="Images/mbh room3.jpeg">
+            </div>
+            <div class="details">
+                <h2>MBH Student Accommodation</h2>
+                <p>📍 Location: Entokozweni</p>
+                <p>🛏️ Rooms: Singles and sharings</p>
+                <p>💰 Price: NSFAS Accredited</p>
+                <div class="rating-stars">★★★★★★</div>
+                <a href="Mbh.html"><button class="more-details">View Full Profile</button></a>
+            </div>
+        </div>
 
     </div>
 </main>
